scene, camera, renderer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Basic ThreeJS APP</title>
+    <title>Project2</title>
     <style>
         body {
             /* settings for body to use the complete page */
